Fix colors for boxed areas in dark mode

--- a/_sass/248acu/_payments.scss
+++ b/_sass/248acu/_payments.scss
@@ -7,10 +7,10 @@
     overflow: auto;
     padding: 20px;
     // min-width: 259px;
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-    border-radius: 10px;
+    background: $code-background-color;
+    color: $text-color;
+    border: 1px solid $border-color;
+    border-radius: $border-radius;
     font-family: Roboto, Arial, sans-serif;
     margin-bottom: 10px;
 
@@ -36,13 +36,13 @@
     font-size: 18px;
     line-height: 48px;
     height: 48px;
-    color: #000000 !important;
     text-decoration: none !important;
     min-width: 212px;
     background-color: #ffbf00;
+    color: #111 !important; // Goes with yellow #ffbf00
     text-align: center;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, .1) inset;
-    border-radius: 6px;
+    border-radius: $border-radius;
 
     &--green {
         background-color: #00ad74;
@@ -50,7 +50,7 @@
     }
 
     &--blue {
-        background: #2980b9;
+        background: hsl(204, 64%, 44%);
         color: white !important;
     }
 
